# data-quality

./: LICENSE  README.md  pyproject.toml  requirements.txt
data/00-simulated_data/: simulated_data.csv
data/02-analysis_data/: analysis_data.csv
paper/: paper.qmd  references.bib
scripts/: 00-simulate_data.py  01-test_simulated_data.R  01-test_simulated_data.py  02-download_data.py  03-clean_data.R  03-clean_data.py  04-test_analysis_data.R  04-test_analysis_data.py
