[project]
name = "data-quality"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datetime>=5.5",
    "great-expectations>=0.18.8",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "polars>=1.29.0",
    "pydantic>=2.11.4",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
]
